--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
   <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
     <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
-    <a href="Home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="menu.html">Menu</a>
     <a href="about.html" target="_blank">About</a>
     <a href="contact.html">Contact</a>
