--- a/Menu.html
+++ b/Menu.html
@@ -145,8 +145,8 @@
   <!-- Sidebar -->
   <div class="sidebar" id="sidebar">
     <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
-    <a href="Home.html">Home</a>
-    <a href="manu.html">Menu</a>
+    <a href="index.html">Home</a>
+    <a href="Menu.html">Menu</a>
     <a href="about.html" target="_blank">About</a>
     <a href="contact.html">Contact</a>
   </div>
