--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
   <div class="sidebar" id="sidebar">
     <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
     <a href="index.html">Home</a>
-    <a href="menu.html">Menu</a>
+    <a href="Menu.html">Menu</a>
     <a href="about.html" target="_blank">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="Contact.html">Contact</a>
   </div>
 
   <!-- Header Section -->
