--- a/Menu.html
+++ b/Menu.html
@@ -143,14 +143,14 @@
   </div>
 
   <!-- Sidebar -->
-  <div class="sidebar" id="sidebar">
+ div class="sidebar" id="sidebar">
     <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
     <a href="index.html">Home</a>
     <a href="Menu.html">Menu</a>
     <a href="about.html" target="_blank">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="Contact.html">Contact</a>
   </div>
-
+  
   <header>
     <div class="banner">
       <h1>Welcome to Delicious Delights</h1>
