--- a/Contact.html
+++ b/Contact.html
@@ -108,13 +108,13 @@
       </div>
     
       <!-- Sidebar -->
-      <div class="sidebar" id="sidebar">
-        <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
-        <a href="Home.html">Home</a>
-        <a href="manu.html">Menu</a>
-        <a href="about.html" target="_blank">About</a>
-        <a href="contact.html">Contact</a>
-      </div>
+      div class="sidebar" id="sidebar">
+    <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
+    <a href="index.html">Home</a>
+    <a href="Menu.html">Menu</a>
+    <a href="about.html" target="_blank">About</a>
+    <a href="Contact.html">Contact</a>
+  </div>
 
     <section id="contact" style="background-color: #03a9f4;"> <!-- Set background color for Contact section -->
         <h2>Contact Us</h2>
