--- a/about.html
+++ b/about.html
@@ -95,12 +95,12 @@ New! Keyboard shortcuts … Drive keyboard shortcuts have been updated to give y
   </div>
 
   <!-- Sidebar -->
-  <div class="sidebar" id="sidebar">
+  div class="sidebar" id="sidebar">
     <a href="javascript:void(0)" class="close-btn" onclick="closeNav()">&times;</a>
-    <a href="Home.html">Home</a>
-    <a href="manu.html">Menu</a>
+    <a href="index.html">Home</a>
+    <a href="Menu.html">Menu</a>
     <a href="about.html" target="_blank">About</a>
-    <a href="contact.html">Contact</a>
+    <a href="Contact.html">Contact</a>
   </div>
 
     <section id="about" style="background-color: #ffc107;">
